force-app/main/default/objects/Service_Contract__c/Service_Contract__c.object-meta.xml
<CustomObject>
    <description>Closed Won된 딜에서 전환된 서비스 계약. 범위·기간·SLA 관리</description>
    <label>Service Contract</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>