force-app/main/default/objects/Service_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>계약 종료일</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>