force-app/main/default/objects/Service_Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>전환된 원본 딜</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>