force-app/main/default/objects/Service_Contract__c/fields/SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hours__c</fullName>
    <description>계약 SLA 응답시간(시간)</description>
    <label>SLA Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>