force-app/main/default/objects/Service_Contract__c/fields/Total_Work_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Cost__c</fullName>
    <description>하위 작업비 합계 (Roll-Up은 다음 단계)</description>
    <label>Total Work Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>